--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
       <button onclick="playChannel('https://dzkyvlfyge.erbvr.com/PeaceTvBangla/index.m3u8')">Peace TV Bangla</button>
       <button onclick="playChannel('https://deshitv.deshitv24.net/live/myStream/playlist.m3u8')">Deshi Tv</button>
       <button onclick="playChannel('http://m.live.net.sa:1935/live/quran/playlist.m3u8')">quran Tv</button>
-      <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209611/master.m3u')">Ekushe Tv</button>
-      <button onclick="playChannel('https://cors-proxy.io/?https://cloudfrontnet.vercel.app/tplay/playout/209611/master.m3u');
-">Ekushe Tv</button>
+      <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209611/master.m3u')">GopalVar</button>
       
     </div>
 
