--- a/index.html
+++ b/index.html
@@ -46,20 +46,22 @@
   </style>
 </head>
 <body>
-  <h1>📺 Bangladeshi Live TV</h1>
+  <h1>📺 I Get this free from github, personal use only </h1>
+
+<!--   i get this from here, https://github.com/SonyIPTV -->
 
   <div class="channel-buttons">
     <button onclick="playChannel('https://dzkyvlfyge.erbvr.com/PeaceTvBangla/index.m3u8')">Peace TV Bangla</button>
-    <button onclick="playChannel('https://deshitv.deshitv24.net/live/myStream/playlist.m3u8')">Deshi Tv</button>
     <button onclick="playChannel('http://m.live.net.sa:1935/live/quran/playlist.m3u8')">Quran Tv</button>
+    <button onclick="playChannel('https://deshitv.deshitv24.net/live/myStream/playlist.m3u8')">Deshi </button>
     <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209611/master.m3u8')">Gopal Bhar</button>
     <button onclick="playChannel('https://tvsen6.aynaott.com/channel24/index.m3u8')">Channel 24</button>
-    <button onclick="playChannel('https://tvsen6.aynaott.com/ekattorbdtv/index.m3u8')">Ekattor TV</button>
+    <button onclick="playChannel('https://tvsen6.aynaott.com/ekattorbdtv/index.m3u8')">Ekattor </button>
     <button onclick="playChannel('https://owrcovcrpy.gpcdn.net/bpk-tv/1705/output/1705-audio_113352_eng=113200-video=1692000.m3u8')">Ekattor (Alt)</button>
-    <button onclick="playChannel('https://tvsen6.aynaott.com/jamunatv/index.m3u8')">Jamuna TV</button>
-    <button onclick="playChannel('https://byphdgllyk.gpcdn.net/hls/deeptotv/0_1/index.m3u8')">Deepto TV</button>
-    <button onclick="playChannel('https://mtv.sunplex.live/MAASRANGA-TV/tracks-v1a1/mono.m3u8')">Maasranga TV</button>
-    <button onclick="playChannel('https://byphdgllyk.gpcdn.net/hls/DeeptoTV/index.m3u8?v=1')">Deptto TV (Alt)</button>
+    <button onclick="playChannel('https://tvsen6.aynaott.com/jamunatv/index.m3u8')">Jamuna </button>
+    <button onclick="playChannel('https://byphdgllyk.gpcdn.net/hls/deeptotv/0_1/index.m3u8')">Deepto </button>
+    <button onclick="playChannel('https://mtv.sunplex.live/MAASRANGA-TV/tracks-v1a1/mono.m3u8')">Maasranga </button>
+    <button onclick="playChannel('https://byphdgllyk.gpcdn.net/hls/DeeptoTV/index.m3u8?v=1')">Deptto  (Alt)</button>
     <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209622/master.m3u8')">Motu Patlu</button>
     <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209901/master.m3u8')">Shinchan</button>
     <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209902/master.m3u8')">Doraemon</button>
