--- a/index.html
+++ b/index.html
@@ -4,46 +4,7 @@
   <meta charset="UTF-8" />
   <title>Live TV Player</title>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-  <style>
-    body {
-      background: #121212;
-      color: white;
-      font-family: sans-serif;
-      text-align: center;
-    }
-
-    .channel-buttons {
-      margin: 20px auto;
-      max-width: 900px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-    }
-
-    .channel-buttons button {
-      padding: 10px 15px;
-      border: none;
-      border-radius: 6px;
-      background-color: #007bff;
-      color: white;
-      cursor: pointer;
-      flex: 1 1 200px;
-    }
-
-    .channel-buttons button:hover {
-      background-color: #0056b3;
-    }
-
-    video {
-      width: 90%;
-      max-width: 900px;
-      height: 400px;
-      margin-top: 20px;
-      border-radius: 10px;
-      border: 2px solid #00aaff;
-    }
-  </style>
+<link rel="stylesheet" href="raihaniu.github.io/bus/a.css>
 </head>
 <body>
   <h1>📺 Bangladeshi Live TV</h1>
