--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Live TV Player</title>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-<link rel="stylesheet" href="raihaniu.github.io/bus/a.css>
+<link rel="stylesheet" href="https://raihaniu.github.io//bus/a.css">
 </head>
 <body>
   <h1>📺 Bangladeshi Live TV</h1>
@@ -35,33 +35,6 @@
 
   <video id="liveTv" controls autoplay></video>
 
-  <script>
-    const video = document.getElementById('liveTv');
-    let hls;
-
-    function playChannel(videoSrc) {
-      if (Hls.isSupported()) {
-        if (hls) {
-          hls.destroy();
-        }
-        hls = new Hls();
-        hls.loadSource(videoSrc);
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED, function () {
-          video.play();
-        });
-      } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-        video.src = videoSrc;
-        video.addEventListener('loadedmetadata', function () {
-          video.play();
-        });
-      } else {
-        alert("Your browser does not support HLS playback.");
-      }
-    }
-
-    // Optional: Load a default channel
-    // playChannel('https://dzkyvlfyge.erbvr.com/PeaceTvBangla/index.m3u8');
-  </script>
+  <script src="https://raihaniu.github.io//bus/b.js"></script>
 </body>
 </html>
