--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <button onclick="playChannel('https://mtv.sunplex.live/MAASRANGA-TV/tracks-v1a1/mono.m3u8')">Maasranga </button>
     <button onclick="playChannel('https://byphdgllyk.gpcdn.net/hls/DeeptoTV/index.m3u8?v=1')">Deptto  (Alt)</button>
     <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209622/master.m3u8')">Motu Patlu</button>
-    <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209901/master.m3u8')">Shinchan</button>
     <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209902/master.m3u8')">Doraemon</button>
     <button onclick="playChannel('https://cloudfrontnet.vercel.app/tplay/playout/209611/master.m3u8')">Sony Aath</button>
     <button onclick="playChannel('https://d2vnbkvjbims7j.cloudfront.net/containerA/LTN/playlist.m3u8?v=1')">BBC </button>
+    <button onclick="playChannel('https://d35j504z0x2vu2.cloudfront.net/v1/master/0bc8e8376bd8417a1b6761138aa41c26c7309312/al-jazeera-english/playlist.m3u8')">al-jazeera </button>
     <button onclick="playChannel('http://m.live.net.sa:1935/live/sunnah/chunklist.m3u8?v=1')">Sunnah </button>
     <button onclick="playChannel('https://streaming.madanichannel.tv/static/streaming-playlists/hls/d3e49b76-ac06-4689-a641-9200445b647f/master.m3u8')">Madani </button>
     <button onclick="playChannel('https://wildearth-plex.amagi.tv/master.m3u8')">Wild </button>
     <button onclick="playChannel('https://d35j504z0x2vu2.cloudfront.net/v1/master/0bc8e8376bd8417a1b6761138aa41c26c7309312/4k-travel-tv/manifest.m3u8')">4K Nature</button>
-        <button onclick="playChannel('https://deshitv.deshitv24.net/live/myStream/playlist.m3u8')">Deshi </button>
+    <button onclick="playChannel('https://deshitv.deshitv24.net/live/myStream/playlist.m3u8')">Deshi </button>
   </div>
 
   <video id="liveTv" controls autoplay></video>
